# Electronix_MES

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  MILESTONES.md  README.md  docker-compose.yml
.claude/agents/: architect.md  builder.md  scaffold.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: .env.example  .gitignore  README.md  TESTPLAN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/api/: client.ts  hooks.ts  types.ts  useWebSocket.ts
apps/desktop/src/auth/: AuthContext.tsx  Login.tsx
apps/desktop/src/components/: ui.tsx
apps/desktop/src/kiosk/: ChatPanel.tsx  ClassifyModal.tsx  Kiosk.tsx  ScrapModal.tsx
apps/desktop/src/supervisor/: Cmms.tsx  Copilot.tsx  Dashboard.tsx  ErpSettings.tsx  Pareto.tsx  Qms.tsx  RevisionQueue.tsx  Supervisor.tsx
apps/mobile/: README.md
crates/mes-agent-tools/: Cargo.toml
crates/mes-agent-tools/src/: lib.rs  tools.rs
crates/mes-client/: Cargo.toml
crates/mes-client/src/: analytics.rs  auth.rs  cmms.rs  copilot.rs  dnc.rs  erp.rs  exec.rs  ingest.rs  lib.rs  master.rs  orders.rs  qms.rs  sync.rs  trace.rs  ws.rs
crates/mes-cloud/: Cargo.toml
crates/mes-cloud/src/: agent.rs  api.rs  config.rs  copilot.rs  http.rs  lib.rs  main.rs  sync.rs
crates/mes-cloud/tests/: m12_sync.rs  m13_agent.rs
crates/mes-cloud/tests/common/: mod.rs
crates/mes-core/: Cargo.toml
crates/mes-core/src/: analytics.rs  barcode.rs  cmms.rs  dnc.rs  error.rs  id.rs  lib.rs  oee.rs  qms.rs  roles.rs  state_machine.rs  work_order.rs
crates/mes-db/: Cargo.toml
crates/mes-db/migrations/: 0001_baseline.sql  0002_m1_master_auth.sql  0003_m2_ingest_states.sql  0004_m3_work_orders.sql  0005_m4_dnc.sql  0006_m5_downtime_analytics.sql  0007_m6_oee.sql  0008_m7_traceability.sql  0009_m8_qms.sql  0010_m9_cmms.sql  0011_m10_erp.sql  0012_m12_sync.sql  0013_m13_agent.sql
crates/mes-db/src/: lib.rs  repo.rs  repo_analytics.rs  repo_cmms.rs  repo_dnc.rs  repo_erp.rs  repo_ingest.rs  repo_oee.rs  repo_orders.rs  repo_qms.rs  repo_sync.rs  repo_trace.rs
crates/mes-diagnostics/: Cargo.toml
crates/mes-diagnostics/src/: buffer.rs  crash.rs  error_trigger.rs  github.rs  heartbeat.rs  lib.rs  manual.rs  redact.rs
crates/mes-dnc-bridge/: Cargo.toml
crates/mes-dnc-bridge/src/: client.rs  lib.rs  protocol.rs
crates/mes-edge/: Cargo.toml
crates/mes-edge/src/: analytics.rs  api.rs  auth.rs  auth_routes.rs  cmms.rs  config.rs  diagnostics.rs  dnc.rs  erp.rs  exec.rs  extract.rs  http.rs  ingest.rs  lib.rs  main.rs  master.rs  orders.rs  process.rs  qms.rs  trace.rs  ws.rs
crates/mes-edge/tests/: m10_erp.rs  m1_master_auth.rs  m2_ingest_states.rs  m3_orders_exec.rs  m4_dnc.rs  m5_analytics.rs  m6_oee.rs  m7_traceability.rs  m8_qms.rs  m9_cmms.rs
crates/mes-edge/tests/common/: mod.rs
crates/mes-erp/: Cargo.toml
crates/mes-erp/src/: crypto.rs  lib.rs  mapping.rs  push.rs
crates/mes-ingest/: Cargo.toml
crates/mes-ingest/src/: lib.rs  sim.rs
crates/mes-sync/: Cargo.toml
crates/mes-sync/src/: lib.rs
tools/machine-sim/: README.md
