[package]
name = "mes-agent-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mes-db = { workspace = true }
sqlx = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
