[package]
name = "mes-client"
version.workspace = true
edition.workspace = true
license.workspace = true

# Shared API request/response types used by the services and (later) the Tauri
# apps. Stays lightweight and mobile-ready (§1) — no runtime, no I/O.
[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
utoipa = { workspace = true }
