[package]
name = "mes-core"
version.workspace = true
edition.workspace = true
license.workspace = true

# mes-core is deliberately I/O-free and 100% unit-testable (§6). Keep this
# dependency list free of anything that opens a socket, file, or DB pool.
[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
