[package]
name = "mes-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mes-core = { workspace = true }
mes-client = { workspace = true }

sqlx = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
