[package]
name = "mes-dnc-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mes-core = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
