[package]
name = "mes-edge"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mes-edge"
path = "src/main.rs"

[dependencies]
mes-core = { workspace = true }
mes-db = { workspace = true }
mes-client = { workspace = true }

sqlx = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true }

argon2 = "0.5"
jsonwebtoken = "9"

[dev-dependencies]
mes-ingest = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio-tungstenite = "0.24"
futures-util = "0.3"
