[package]
name = "mes-erp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Token encryption at rest (§14) and the outbound "sync now" REST client.
chacha20poly1305 = "0.10"
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
